sphinxcontrib/soliditydomain/SolidityParser.py
# Generated from Solidity.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class SolidityParser(Parser):

    grammarFileName = "Solidity.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'pragma'",
        "';'",
        "'^'",
        "'~'",
        "'>='",
        "'>'",
        "'<'",
        "'<='",
        "'='",
        "'as'",
        "'import'",
        "'*'",
        "'from'",
        "'{'",
        "','",
        "'}'",
        "'contract'",
        "'interface'",
        "'library'",
        "'is'",
        "'('",
        "')'",
        "'using'",
        "'for'",
        "'struct'",
        "'constructor'",
        "'modifier'",
        "'function'",
        "'returns'",
        "'event'",
        "'enum'",
        "'['",
        "']'",
        "'.'",
        "'mapping'",
        "'=>'",
        "'memory'",
        "'storage'",
        "'calldata'",
        "'if'",
        "'else'",
        "'while'",
        "'assembly'",
        "'do'",
        "'return'",
        "'throw'",
        "'emit'",
        "'var'",
        "'address'",
        "'bool'",
        "'string'",
        "'byte'",
        "'++'",
        "'--'",
        "'new'",
        "'+'",
        "'-'",
        "'after'",
        "'delete'",
        "'!'",
        "'**'",
        "'/'",
        "'%'",
        "'<<'",
        "'>>'",
        "'&'",
        "'|'",
        "'=='",
        "'!='",
        "'&&'",
        "'||'",
        "'?'",
        "':'",
        "'|='",
        "'^='",
        "'&='",
        "'<<='",
        "'>>='",
        "'+='",
        "'-='",
        "'*='",
        "'/='",
        "'%='",
        "'let'",
        "':='",
        "'=:'",
        "'switch'",
        "'case'",
        "'default'",
        "'->'",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'anonymous'",
        "'break'",
        "'constant'",
        "'continue'",
        "'external'",
        "'indexed'",
        "'internal'",
        "'payable'",
        "'private'",
        "'public'",
        "'pure'",
        "'view'",
    ]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "Int",
        "Uint",
        "Byte",
        "Fixed",
        "Ufixed",
        "VersionLiteral",
        "BooleanLiteral",
        "DecimalNumber",
        "HexNumber",
        "NumberUnit",
        "HexLiteral",
        "ReservedKeyword",
        "AnonymousKeyword",
        "BreakKeyword",
        "ConstantKeyword",
        "ContinueKeyword",
        "ExternalKeyword",
        "IndexedKeyword",
        "InternalKeyword",
        "PayableKeyword",
        "PrivateKeyword",
        "PublicKeyword",
        "PureKeyword",
        "ViewKeyword",
        "Identifier",
        "StringLiteral",
        "WS",
        "COMMENT",
        "LINE_COMMENT",
    ]

    RULE_sourceUnit = 0
    RULE_pragmaDirective = 1
    RULE_pragmaName = 2
    RULE_pragmaValue = 3
    RULE_version = 4
    RULE_versionOperator = 5
    RULE_versionConstraint = 6
    RULE_importDeclaration = 7
    RULE_importDirective = 8
    RULE_contractDefinition = 9
    RULE_inheritanceSpecifier = 10
    RULE_contractPart = 11
    RULE_stateVariableDeclaration = 12
    RULE_usingForDeclaration = 13
    RULE_structDefinition = 14
    RULE_constructorDefinition = 15
    RULE_modifierDefinition = 16
    RULE_modifierInvocation = 17
    RULE_functionDefinition = 18
    RULE_returnParameters = 19
    RULE_modifierList = 20
    RULE_eventDefinition = 21
    RULE_enumValue = 22
    RULE_enumDefinition = 23
    RULE_parameterList = 24
    RULE_parameter = 25
    RULE_eventParameterList = 26
    RULE_eventParameter = 27
    RULE_functionTypeParameterList = 28
    RULE_functionTypeParameter = 29
    RULE_variableDeclaration = 30
    RULE_typeName = 31
    RULE_userDefinedTypeName = 32
    RULE_mapping = 33
    RULE_functionTypeName = 34
    RULE_storageLocation = 35
    RULE_stateMutability = 36
    RULE_block = 37
    RULE_statement = 38
    RULE_expressionStatement = 39
    RULE_ifStatement = 40
    RULE_whileStatement = 41
    RULE_simpleStatement = 42
    RULE_forStatement = 43
    RULE_inlineAssemblyStatement = 44
    RULE_doWhileStatement = 45
    RULE_continueStatement = 46
    RULE_breakStatement = 47
    RULE_returnStatement = 48
    RULE_throwStatement = 49
    RULE_emitStatement = 50
    RULE_variableDeclarationStatement = 51
    RULE_variableDeclarationList = 52
    RULE_identifierList = 53
    RULE_elementaryTypeName = 54
    RULE_expression = 55
    RULE_primaryExpression = 56
    RULE_expressionList = 57
    RULE_nameValueList = 58
    RULE_nameValue = 59
    RULE_functionCallArguments = 60
    RULE_functionCall = 61
    RULE_assemblyBlock = 62
    RULE_assemblyItem = 63
    RULE_assemblyExpression = 64
    RULE_assemblyCall = 65
    RULE_assemblyLocalDefinition = 66
    RULE_assemblyAssignment = 67
    RULE_assemblyIdentifierOrList = 68
    RULE_assemblyIdentifierList = 69
    RULE_assemblyStackAssignment = 70
    RULE_labelDefinition = 71
    RULE_assemblySwitch = 72
    RULE_assemblyCase = 73
    RULE_assemblyFunctionDefinition = 74
    RULE_assemblyFunctionReturns = 75
    RULE_assemblyFor = 76
    RULE_assemblyIf = 77
    RULE_assemblyLiteral = 78
    RULE_subAssembly = 79
    RULE_tupleExpression = 80
    RULE_elementaryTypeNameExpression = 81
    RULE_numberLiteral = 82
    RULE_identifier = 83

    ruleNames = [
        "sourceUnit",
        "pragmaDirective",
        "pragmaName",
        "pragmaValue",
        "version",
        "versionOperator",
        "versionConstraint",
        "importDeclaration",
        "importDirective",
        "contractDefinition",
        "inheritanceSpecifier",
        "contractPart",
        "stateVariableDeclaration",
        "usingForDeclaration",
        "structDefinition",
        "constructorDefinition",
        "modifierDefinition",
        "modifierInvocation",
        "functionDefinition",
        "returnParameters",
        "modifierList",
        "eventDefinition",
        "enumValue",
        "enumDefinition",
        "parameterList",
        "parameter",
        "eventParameterList",
        "eventParameter",
        "functionTypeParameterList",
        "functionTypeParameter",
        "variableDeclaration",
        "typeName",
        "userDefinedTypeName",
        "mapping",
        "functionTypeName",
        "storageLocation",
        "stateMutability",
        "block",
        "statement",
        "expressionStatement",
        "ifStatement",
        "whileStatement",
        "simpleStatement",
        "forStatement",
        "inlineAssemblyStatement",
        "doWhileStatement",
        "continueStatement",
        "breakStatement",
        "returnStatement",
        "throwStatement",
        "emitStatement",
        "variableDeclarationStatement",
        "variableDeclarationList",
        "identifierList",
        "elementaryTypeName",
        "expression",
        "primaryExpression",
        "expressionList",
        "nameValueList",
        "nameValue",
        "functionCallArguments",
        "functionCall",
        "assemblyBlock",
        "assemblyItem",
        "assemblyExpression",
        "assemblyCall",
        "assemblyLocalDefinition",
        "assemblyAssignment",
        "assemblyIdentifierOrList",
        "assemblyIdentifierList",
        "assemblyStackAssignment",
        "labelDefinition",
        "assemblySwitch",
        "assemblyCase",
        "assemblyFunctionDefinition",
        "assemblyFunctionReturns",
        "assemblyFor",
        "assemblyIf",
        "assemblyLiteral",
        "subAssembly",
        "tupleExpression",
        "elementaryTypeNameExpression",
        "numberLiteral",
        "identifier",
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    T__12 = 13
    T__13 = 14
    T__14 = 15
    T__15 = 16
    T__16 = 17
    T__17 = 18
    T__18 = 19
    T__19 = 20
    T__20 = 21
    T__21 = 22
    T__22 = 23
    T__23 = 24
    T__24 = 25
    T__25 = 26
    T__26 = 27
    T__27 = 28
    T__28 = 29
    T__29 = 30
    T__30 = 31
    T__31 = 32
    T__32 = 33
    T__33 = 34
    T__34 = 35
    T__35 = 36
    T__36 = 37
    T__37 = 38
    T__38 = 39
    T__39 = 40
    T__40 = 41
    T__41 = 42
    T__42 = 43
    T__43 = 44
    T__44 = 45
    T__45 = 46
    T__46 = 47
    T__47 = 48
    T__48 = 49
    T__49 = 50
    T__50 = 51
    T__51 = 52
    T__52 = 53
    T__53 = 54
    T__54 = 55
    T__55 = 56
    T__56 = 57
    T__57 = 58
    T__58 = 59
    T__59 = 60
    T__60 = 61
    T__61 = 62
    T__62 = 63
    T__63 = 64
    T__64 = 65
    T__65 = 66
    T__66 = 67
    T__67 = 68
    T__68 = 69
    T__69 = 70
    T__70 = 71
    T__71 = 72
    T__72 = 73
    T__73 = 74
    T__74 = 75
    T__75 = 76
    T__76 = 77
    T__77 = 78
    T__78 = 79
    T__79 = 80
    T__80 = 81
    T__81 = 82
    T__82 = 83
    T__83 = 84
    T__84 = 85
    T__85 = 86
    T__86 = 87
    T__87 = 88
    T__88 = 89
    T__89 = 90
    Int = 91
    Uint = 92
    Byte = 93
    Fixed = 94
    Ufixed = 95
    VersionLiteral = 96
    BooleanLiteral = 97
    DecimalNumber = 98
    HexNumber = 99
    NumberUnit = 100
    HexLiteral = 101
    ReservedKeyword = 102
    AnonymousKeyword = 103
    BreakKeyword = 104
    ConstantKeyword = 105
    ContinueKeyword = 106
    ExternalKeyword = 107
    IndexedKeyword = 108
    InternalKeyword = 109
    PayableKeyword = 110
    PrivateKeyword = 111
    PublicKeyword = 112
    PureKeyword = 113
    ViewKeyword = 114
    Identifier = 115
    StringLiteral = 116
    WS = 117
    COMMENT = 118
    LINE_COMMENT = 119

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class SourceUnitContext(ParserRuleContext):
        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SolidityParser.EOF, 0)

        def pragmaDirective(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(SolidityParser.PragmaDirectiveContext)
            else:
                return self.getTypedRuleContext(
                    SolidityParser.PragmaDirectiveContext, i
                )

        def importDirective(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(SolidityParser.ImportDirectiveContext)
            else:
                return self.getTypedRuleContext(
                    SolidityParser.ImportDirectiveContext, i
                )

        def contractDefinition(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    SolidityParser.ContractDefinitionContext
                )
            else:
                return self.getTypedRuleContext(
                    SolidityParser.ContractDefinitionContext, i
                )

        def getRuleIndex(self):
            return SolidityParser.RULE_sourceUnit

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSourceUnit"):
                listener.enterSourceUnit(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSourceUnit"):
                listener.exitSourceUnit(self)

    def sourceUnit(self):

        localctx = SolidityParser.SourceUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sourceUnit)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3F) == 0 and (
                (1 << _la)
                & (
                    (1 << SolidityParser.T__0)
                    | (1 << SolidityParser.T__10)
                    | (1 << SolidityParser.T__16)
                    | (1 << SolidityParser.T__17)
                    | (1 << SolidityParser.T__18)
                )
            ) != 0:
                self.state = 171
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [SolidityParser.T__0]:
                    self.state = 168
                    self.pragmaDirective()
                    pass
                elif token in [SolidityParser.T__10]:
                    self.state = 169
                    self.importDirective()
                    pass
                elif token in [
                    SolidityParser.T__16,
                    SolidityParser.T__17,
                    SolidityParser.T__18,
                ]:
                    self.state = 170
                    self.contractDefinition()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 175
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 176
            self.match(SolidityParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PragmaDirectiveContext(ParserRuleContext):
        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pragmaName(self):
            return self.getTypedRuleContext(SolidityParser.PragmaNameContext, 0)

        def pragmaValue(self):
            return self.getTypedRuleContext(SolidityParser.PragmaValueContext, 0)

        def getRuleIndex(self):
            return SolidityParser.RULE_pragmaDirective

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPragmaDirective"):
                listener.enterPragmaDirective(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPragmaDirective"):
                listener.exitPragmaDirective(self)

    def pragmaDirective(self):

        localctx = SolidityParser.PragmaDirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_pragmaDirective)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.match(SolidityParser.T__0)
            self.state = 179
            self.pragmaName()
            self.state = 180
            self.pragmaValue()
            self.state = 181
            self.match(SolidityParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PragmaNameContext(ParserRuleContext):
        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(SolidityParser.IdentifierContext, 0)

        def getRuleIndex(self):
            return SolidityParser.RULE_pragmaName

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPragmaName"):
                listener.enterPragmaName(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPragmaName"):
                listener.exitPragmaName(self)

    def pragmaName(self):

        localctx = SolidityParser.PragmaNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_pragmaName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PragmaValueContext(ParserRuleContext):
        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def version(self):
            return self.getTypedRuleContext(SolidityParser.VersionContext, 0)

        def expression(self):
            return self.getTypedRuleContext(SolidityParser.ExpressionContext, 0)

        def getRuleIndex(self):
            return SolidityParser.RULE_pragmaValue

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPragmaValue"):
                listener.enterPragmaValue(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPragmaValue"):
                listener.exitPragmaValue(self)

    def pragmaValue(self):

        localctx = SolidityParser.PragmaValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_pragmaValue)
        try:
            self.state = 187
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 2, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 185
                self.version()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 186
                self.expression(0)
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VersionContext(ParserRuleContext):
        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def versionConstraint(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    SolidityParser.VersionConstraintContext
                )
            else:
                return self.getTypedRuleContext(
                    SolidityParser.VersionConstraintContext, i
                )

        def getRuleIndex(self):
            return SolidityParser.RULE_version

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterVersion"):
                listener.enterVersion(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitVersion"):
                listener.exitVersion(self)

    def version(self):
